# coalas

./: README.md  log.md  publish.sh  setup.cfg  todo.md
Docs/: Readme.md  recommendations.md
Scripts/: main.py  s.csv  take2.py
src/coalas/: coalas.py  csv.py  csvMultiple.py  csvReader.py  p.csv  t.csv  x.csv
src/coalas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/koalas/: koalas.py
src/koalas_The_Arctesian.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: Testpypi.py  install-pypi.sh  install-test.sh  pypi.py  testData.csv
