[metadata]
name = koalas-The-Arctesian
version = 0.0.1
author = Daniel Okita
author_email = me@danielokita.com
description = A array based way of dealing with csv files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheArctesian/koalas
project_urls =
    Bug Tracker = https://github.com/TheArctesian/koalas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
