[metadata]
name = coalas
version = 0.0.4
author = arctesian
author_email = me@danielokita.com
description = A array based way of dealing with csv files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheArctesian/coalas
project_urls =
    Bug Tracker = https://github.com/TheArctesian/coalas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
